--- a/challenges/junior/social-media-dashboard-with-theme-switcher/scss/components/_overview-card.scss
+++ b/challenges/junior/social-media-dashboard-with-theme-switcher/scss/components/_overview-card.scss
@@ -53,6 +53,7 @@
     font-size: .9rem;
     font-weight: 700;
     justify-self: end;
+    gap: .3rem;
 
     .arrow{
       width: 10px;
